--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint": "^7.19.0",
     "install": "^0.13.0",
     "js-sha3": "^0.8.0",
-    "material-ui": "^1.0.0-beta.47",
+    "material-ui": "^0.20.2",
     "mobx": "^6.1.1",
     "mobx-react": "^7.1.0",
     "moment": "^2.29.1",
@@ -25,7 +25,7 @@
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^1.1.5",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
     "universal-cookie": "^4.0.4",
